# simplify

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  simplify.py
.github/workflows/: publish.yml  test.yml
astrosimplify/: __init__.py
media/: make_bubble_gifs.py  make_bubble_panels.py
